<?xml version="1.0" ?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" style="@style/Widget.Android.AppWidget.Container" android:id="@+id/timetable_root" android:layout_width="match_parent" android:layout_height="match_parent" android:theme="@style/Theme.Android.AppWidgetContainer" android:background="@drawable/rounded_corner_background" android:padding="8dp">
    <TextView android:id="@+id/widget_earlier" android:layout_width="match_parent" android:layout_height="18dp" android:textSize="10sp" android:textColor="@color/gray88" android:gravity="end"/>
    <TextView android:id="@+id/widget_later" android:layout_width="match_parent" android:layout_height="18dp" android:layout_alignParentBottom="true" android:textSize="10sp" android:textColor="@color/gray88" android:gravity="end"/>
    <LinearLayout android:id="@+id/timetable_start" android:layout_below="@id/widget_earlier" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
        <TextView android:layout_width="19dp" android:layout_height="match_parent"/>
        <TextView android:id="@+id/widget_day_mon" style="@style/DayTextStyle" android:text="@string/mon"/>
        <TextView android:id="@+id/widget_day_tue" style="@style/DayTextStyle" android:text="@string/tue"/>
        <TextView android:id="@+id/widget_day_wed" style="@style/DayTextStyle" android:text="@string/wed"/>
        <TextView android:id="@+id/widget_day_thu" style="@style/DayTextStyle" android:text="@string/thu"/>
        <TextView android:id="@+id/widget_day_fri" style="@style/DayTextStyle" android:text="@string/fri"/>
        <TextView android:id="@+id/widget_day_sat" style="@style/DayTextStyle" android:text="@string/sat" android:visibility="gone"/>
        <TextView android:id="@+id/widget_day_sun" style="@style/DayTextStyle" android:text="@string/sun" android:visibility="gone"/>
    </LinearLayout>
    <LinearLayout android:id="@+id/widget_time_grid" android:layout_below="@id/timetable_start" android:layout_above="@id/widget_later" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical"/>
    <LinearLayout android:layout_below="@id/timetable_start" android:layout_above="@id/widget_later" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingTop="9dp" android:orientation="horizontal">
        <TextView style="@style/TimeTextStyle"/>
        <RelativeLayout android:id="@+id/time_table_column_1" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"/>
        <RelativeLayout android:id="@+id/time_table_column_2" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"/>
        <RelativeLayout android:id="@+id/time_table_column_3" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"/>
        <RelativeLayout android:id="@+id/time_table_column_4" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"/>
        <RelativeLayout android:id="@+id/time_table_column_5" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"/>
        <RelativeLayout android:id="@+id/time_table_column_6" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:visibility="gone"/>
        <RelativeLayout android:id="@+id/time_table_column_7" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:visibility="gone"/>
    </LinearLayout>
</RelativeLayout>
